// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`renders correctly for a disabled select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    disabled=""
    type="text"
  >
    <option
      disabled=""
      value="sunny"
    >
      Sunny
    </option>
    <option
      disabled=""
      value="windy"
    >
      Windy
    </option>
    <option
      disabled=""
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`renders correctly for a full width select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
  style="min-width: 50px; width: 100%;"
  width="100%"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`renders correctly for a select with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      selected=""
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`renders correctly for a select with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #8e9ca8;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      disabled=""
      selected=""
    >
      Select weather...
    </option>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c9[disabled] + .c4 {
  fill: #8d8d8d;
}

.c9 + .c4 {
  width: 25px;
  height: 25px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  font-size: 1.5rem;
}

.c2 + .c4 {
  width: 30px;
  height: 30px;
}

.c2 + .c10 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  font-size: 1.25rem;
}

.c2 + .c4 {
  width: 25px;
  height: 25px;
}

.c2 + .c9 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  font-size: 0.8rem;
}

.c2 + .c4 {
  width: 15px;
  height: 15px;
}

.c2 + .c8 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`states renders correctly for a select with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c9[disabled] + .c4 {
  fill: #8d8d8d;
}

.c9 + .c4 {
  width: 25px;
  height: 25px;
}

.c10[disabled] + .c4 {
  fill: #8d8d8d;
}

.c10 + .c4 {
  width: 30px;
  height: 30px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="true"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`states renders correctly for a select with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c9[disabled] + .c4 {
  fill: #8d8d8d;
}

.c9 + .c4 {
  width: 25px;
  height: 25px;
}

.c10[disabled] + .c4 {
  fill: #8d8d8d;
}

.c10 + .c4 {
  width: 30px;
  height: 30px;
}

.c11[disabled] + .c4 {
  fill: #8d8d8d;
}

.c12[disabled] + .c4 {
  fill: #8d8d8d;
}

.c13[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`states renders correctly for a select with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c9[disabled] + .c4 {
  fill: #8d8d8d;
}

.c9 + .c4 {
  width: 25px;
  height: 25px;
}

.c10[disabled] + .c4 {
  fill: #8d8d8d;
}

.c10 + .c4 {
  width: 30px;
  height: 30px;
}

.c11[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`states renders correctly for a select with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c5 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c6[disabled] + .c4 {
  fill: #8d8d8d;
}

.c7[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8[disabled] + .c4 {
  fill: #8d8d8d;
}

.c8 + .c4 {
  width: 15px;
  height: 15px;
}

.c9[disabled] + .c4 {
  fill: #8d8d8d;
}

.c9 + .c4 {
  width: 25px;
  height: 25px;
}

.c10[disabled] + .c4 {
  fill: #8d8d8d;
}

.c10 + .c4 {
  width: 30px;
  height: 30px;
}

.c11[disabled] + .c4 {
  fill: #8d8d8d;
}

.c12[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c2[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2[disabled] + .c4 {
  fill: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
  style="min-width: 50px;"
>
  <select
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="c4 c5"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
